--- a/main/templates/test.html
+++ b/main/templates/test.html
@@ -7,5 +7,9 @@
 </head>
 <body>
     <h2>Это тестовая страница</h2>
+    <div>Версия вторая</div>
+    {% for todo in todo_list %}
+        <h4>{{ todo.text }} - {{todo.created_at}}</h4>
+    {% endfor %}
 </body>
 </html>
