--- a/main/templates/test.html
+++ b/main/templates/test.html
@@ -20,8 +20,15 @@
     {% endfor %} -->
     <section>
         <div class="create_container">
-            <input type="text" class="create_input" placeholder="Напишите сюда новую задачу" />
-            <button class="create_button">Добавить</button>
+            <form action="{% url 'add-todo' %}" method="POST">
+                {% csrf_token %}
+                <input type="text"
+                       class="create_input" 
+                       placeholder="Напишите сюда новую задачу"
+                       name = "todo_text"
+                 />
+                <button class="create_button">Добавить</button>
+            </form>
         </div>
 
         <div class="todo_container">
@@ -37,8 +44,8 @@
                 <div class="todo_item_footer">
                     <p>{{ todo.created_at }}</p>
                     <div class="action_buttons">
-                        <img src="../static/icons/star-50.png" alt="" width="25px" height="25px" />
-                        <img src="../static/icons/delete50.png" alt="" width="25px" height="25px" />
+                        <img src="../static/icons/star-50.png" alt="" />
+                        <img src="../static/icons/delete50.png" alt="" />
                     </div>
                 </div>
             </div>
