--- a/main/static/styles/books.model.css
+++ b/main/static/styles/books.model.css
@@ -1,5 +1,17 @@
+*{
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
 body{
     background-color: rgb(240, 158, 65);
+}
+section{
+    width: 100%;
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 h1{
     text-align: center;
@@ -7,28 +19,87 @@ h1{
     color: #fff;
 }
 .books_container{
-    padding: 30px 20px;
+    padding: 20px 20px;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-evenly;
     flex-wrap: wrap;
     width: 100%;
 }
 .books_item{
+    margin-bottom: 20px;
+    margin-left: 20px;
     border: 2px solid #fff;
     text-align: center;
     background-color: #fff;
     border-radius: 10px;
     width: 20%;
-    padding: 10px 15px;
+    padding: 15px 15px;
 
+}
+h5{
+    padding-bottom: 10px;
+}
+p{
+    text-align: left;
 }
 .price-genre{
     display: flex;
     justify-content: space-around;
+    padding-top: 15px;
+    padding-bottom: 5px;
 }
 h3{
     color: rgb(124, 45, 45);
     font-size: 20px;
     font-weight: bold;
     text-transform: uppercase;
+}
+.create-books_container{
+    width: 80%;
+}
+.create_input{
+    margin-top: 20px;
+    padding: 12px 5px;
+    font-size: 18px;
+    margin-left: 10px;
+    margin-right: 10px;
+    width: 90%;
+    border: 2px solid orange;
+    border-radius: 10px;
+}
+.create_button{
+    margin: 20px 44%;
+    padding: 20px 20px;
+    background-color: #faf8f1;
+    border: 1px solid #741e04;
+    color: rgb(224, 120, 35);
+    font-size: 18px;
+    text-transform: uppercase;
+    font-weight: bold;
+    border-radius: 20px;
+    cursor: pointer;
+
+}
+.create_button:active{
+    border: 1px solid #ce93d8;
+    box-shadow: 2px 2px 5px 3px #fce4ec;
+}
+.main-info{
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    justify-content: space-between;
+}
+.decription-block{
+    max-width: 600px;
+    width: 100%;
+}
+.title-block{
+    display: flex;
+    max-width: 670px;
+    width: 100%;
+}
+.info-block{
+    display: flex;
+    flex-direction: row;
 }
