--- a/main/templates/books.html
+++ b/main/templates/books.html
@@ -1,29 +1,55 @@
 {% load static %}
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My_Book-Shop</title>
-    <link rel="stylesheet" href="{% static 'styles/books.model.css'%}"/>
+    <link rel="stylesheet" href="{% static 'styles/books.model.css'%}" />
 </head>
+
 <body>
+    <section>
     <h1>Книжный магазин</h1>
-    <div class="books_container">
-    {% for books in books_list%}
-    <div class="books_item">
-        <div class="books_item_header">
-            <h3>{{ books.title }}</h3>
-            <p>Описание : {{books.description}}</p>
-        </div>
-        <p> Автор: {{books.author}}</p>
-        <div class="price-genre">
-            <p>жанр : {{ books.genre}}</p>
-            <p>{{books.price}} сом</p>
-        </div>
+    <div class="create-books_container">
+        <form action="{% url 'add-books' %}" method="POST">
+            {% csrf_token %} 
+            <div class="main-info">
+            <div class="title-block">
+                <input type="text" class="create_input" placeholder="Название книги" name="books_title" />
+                <input type="text" class="create_input" placeholder="Альтернативное название" name="books_subtitle" />
+            </div>
+            <div class="decription-block">
+                <input type="text" class="create_input" placeholder="Описание книги" name="books_description" />
+            </div></div>
+            <div class="info-block">
+                <input type="text" class="create_input" placeholder="Цена" name="books_price" />
+                <input type="text" class="create_input" placeholder="Жанр книги" name="books_genre" />
+                <input type="text" class="create_input" placeholder="Автор книги" name="books_author" />
+                <input type="text" class="create_input" placeholder="Год выхода книги : год-месяц-день" name="books_year" />
+            </div>
+            <button class="create_button">Добавить</button>
+        </form> 
     </div>
-    {% endfor %}
-</div>
-    
+    <div class="books_container">
+        {% for books in books_list%}
+        <div class="books_item">
+            <div class="books_item_header">
+                <h3>{{ books.title }}</h3>
+                <h5>Другое название: {{books.subtitle}}</h5>
+                <p>Описание : {{books.description}}</p>
+            </div>
+            <p> Автор: {{books.author}}</p>
+            <p>Год выхода книги: {{books.year}}</p>
+            <div class="price-genre">
+                <p>жанр : {{ books.genre}}</p>
+                <p>{{books.price}} сом</p>
+            </div>
+        </div>
+        {% endfor %}
+    </div>
+</section>
 </body>
+
 </html>
