added todo closing

--- a/main/static/styles/index.css
+++ b/main/static/styles/index.css
@@ -79,6 +79,9 @@ section{
     font-size: 18px;
     font-family: sans-serif;
 }
+.todo_item_header h4 a{
+    text-decoration: none;
+}
 .todo_item_footer{
     display: flex;
     justify-content: space-between;
@@ -97,3 +100,4 @@ section{
     margin: 0 5px;
     cursor: pointer;
 }
+
